# gamestate

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  START-HERE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: github-setup.md
docs/decisions/: 0001-data-source.md  0002-recency-weighting.md  0003-ci-tooling-fixes.md  0004-margin-distribution.md
scripts/: run_slice.py
src/gamestate/: distribution.py  evaluate.py  features.py  ingest.py  weighting.py
tests/: test_distribution.py  test_features.py  test_weighting.py
