[project]
name = "gamestate"
version = "0.1.0"
description = "GameState — probabilistic NFL outcome estimation"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    # Stubs are PINNED, not floated. Unpinned stubs resolve differently per
    # Python version, so mypy passed on 3.11 and failed on 3.12 against
    # identical source. Type checking has to be reproducible to be useful.
    "pandas-stubs==2.2.3.241126",
    "types-requests==2.32.0.20241016",
    "bandit>=1.7",
    "detect-secrets>=1.5",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# ruff -- replaces flake8, isort, pyupgrade, perflint, and most of pylint.
# One tool, one config, one pass. Overlapping linters produce conflicting
# autofixes and enough noise that you stop reading the output entirely.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle       (was: flake8)
    "F",        # pyflakes          (was: flake8)
    "I",        # import sorting    (was: isort)
    "UP",       # modern syntax     (was: pyupgrade)
    "B",        # bugbear -- real logic traps, not style
    "SIM",      # simplifications
    "PD",       # pandas-vet -- catches pandas-specific footguns
    "PERF",     # performance       (was: perflint)
    "RUF",      # ruff's own rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests get to use magic numbers and long lines freely.
"tests/**" = ["E501"]

# ---------------------------------------------------------------------------
# mypy -- start permissive, tighten as you learn. Flipping straight to strict
# on day one produces 400 errors and you disable it by day three.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true      # every function needs a signature
ignore_missing_imports = true     # pandas/sklearn stubs are incomplete

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.bandit]
exclude_dirs = ["tests"]
